# $Id$

2005-10-23	Sveta Smirnova		<sveta@microbecal.com>

* core/DB/: MySQL support is back from incubator.

2005-10-21	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* main/DAOs/FullTextDAO.class.php: silently moved to MappedStorableDAO.

* core/OSQL/: LogicalIn implemented through LogicalExpression, so it's
deprecated now just like LogicalEqLower.

2005-10-20	Garmonbozia R. G.	<garmonbozia@shadanakar.org>

* doc/www/: major site update - css, examples, propaganda, etc.

2005-10-18	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* main/DAOs/NamedObjectDAO.class.php: accept Named implementations too.

* main/DAOs/MappedStorableDAO.class.php: hybrid child of SmartDAO.

* core/OSQL/: LogicalEqLower implemented through LogicalExpression, so it's
deprecated now.

2005-10-17	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* main/DAOs/: transparent cache handling introduced by SmartDAO.

* main/DAOs/, core/DB/: GenericDAO introduced for SmartDAO's compatibility
with DB.

2005-10-16	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* main/DAOs/ObjectQuery.class.php: null-valued mappings handling logic fixed.

* core/DB/DB.class.php: drop as much as we can at objectQuery().

2005-10-12	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* core/Cache/ReferencePool.class.php: new CachePeer wrapper, obsoletes
IdentityMap-in-DAOs idea.

2005-10-11	Anton E. Lebedevich	<noiselist@pochta.ru>

* core/DB/DBTransaction.class.php: "neverending" transactions fixed.

2005-10-10	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* core/OSQL/: SelectQueries as select fields implemented as requested by
Sergeev Sergey <serge@rdw.ru>. Minor internal API changes.

2005-10-06	Anton E. Lebedevich	<noiselist@pochta.ru>

* core/Base/Timestamp.class.php: getDayStartStamp, getDayEndStamp methods
added.

* core/Base/DateRange.class.php: enlarge, clip, compare methods added.

2005-10-06	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* core/OSQL/SelectQuerySkeleton.class.php: merged back to SelectQuery as